2005-12-02  Matthias Clasen  <mclasen@redhat.com>

	* README.in: Add a note about Solaris threads.

	* glib/gspawn.c:
	* configure.in: Remove support for Solaris threads. 
	(#136971, Sebastian Wilhelmi, patch by Andrew Paprocki)

2005-12-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Define G_GUINT64_CONSTANT in analogy to
	G_GINT64_CONSTANT.  (#322568, Andrew Paprocki)

2005-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslice.c: Win32 portability fixes and C99ism removal,
	pointed out by Kazuki Iwamoto.  (#323052)
	
2005-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gatomic.c (g_atomic_int_add): Add a missing volatile for
	the IA64 implementation.

Fri Dec  2 16:18:09 2005  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: some naming and type size fixups.

Fri Dec  2 13:08:58 2005  Tim Janik  <timj@gtk.org>

	* glib/gslice.h (g_slice_free): reworked GCC-specific type-safe macro
	variant into something less verbose, but digestible for gcc-3.4.

Fri Dec  2 10:55:07 2005  Tim Janik  <timj@imendio.com>

	* tests/slice-test.c: extended to perform the benchmarking on the old
	memchunk code if 'O' is selected.

	* tests/memchunks.c: new file which contains the old GLib mem chunks
	implementation with prefix old_mem_chunk_.

	* tests/Makefile.am: added memchunks.c

Fri Dec  2 00:16:59 2005  Tim Janik  <timj@imendio.com>

	* glib/gslice.c: improved gettimeofday() timer resolution by maintaining
	acceptable load distribution of the syscall.
	(allocator_get_magazine_threshold): reduce minimum/single-thread magazine
	sizes to approximately page_size/2.5 to avoid excessive startup allocations.

2005-12-01  Matthias Clasen  <mclasen@redhat.com>

	* tests/gobject/ifacecheck.c (test_iface_base_init): Don't
	double-free base interface members.

	* tests/Makefile.am: Remove duplicate variable.

Thu Dec  1 17:32:46 2005  Tim Janik  <timj@imendio.com>

	* glib/gslice.[hc]: new slice allocator implementation.
